--- a/CSS/Netflix/style.css
+++ b/CSS/Netflix/style.css
@@ -1,91 +1,135 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /*  GENERAL */
-  
-  body {
-    background: rgb(34, 34, 34);
-    color: white;
-    font-family: sans-serif;
-  }
-  
-  button {
-    background: transparent;
-    border: none;
-  }
-  
-  img {
-    height: 100%;
-  }
-  
-  menu {
-    display: flex;
-    list-style: none;
-    gap: 1rem;
-    align-items: center;
-    height: 100%;
-  }
-  
-  /* CABECERA */
-  
-  header {
-    padding: 0.5rem 3rem;
-  
-    background: rgb(0, 0, 0);
-    background: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 1) 0%,
-      rgba(0, 212, 255, 0) 100%
-    );
-  
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-  }
-  
-  header h1 {
-    color: red;
-    font-size: 2.5rem;
-  }
-  
-  /* MENÚ DE NAVEGACIÓN */
-  
-  nav {
-    flex-grow: 1;
-  }
-  
-  menu.nav a {
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    height: 100%;
-    padding: 0.5rem;
-  }
-  
-  menu.nav a.activo {
-    font-weight: bolder;
-  }
-  
-  /* MENÚ DE BOTONES */
-  menu.botones {
-    gap: 1.5rem;
-  }
-  
-  menu.botones button {
-    height: 2rem;
-  }
-  
-  menu.botones svg {
-    fill: white;
-    height: 65%;
-  }
-  
-  /* MAIN  */
-  
-  main {
-    padding: 0 3rem;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/*  GENERAL */
+
+body {
+  background: rgb(34, 34, 34);
+  color: white;
+  font-family: sans-serif;
+  overflow: hidden;
+
+  --espacio: 1rem;
+  --rojo: red;
+}
+
+button {
+  background: transparent;
+  border: none;
+}
+
+img {
+  height: 100%;
+}
+
+menu {
+  display: flex;
+  list-style: none;
+  gap: var(--espacio);
+  align-items: center;
+  height: 100%;
+}
+
+/* CABECERA */
+
+header {
+  padding: calc(var(--espacio) / 2) calc(var(--espacio) * 3);
+
+  background: rgb(10, 8, 8);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 212, 255, 0) 100%
+  );
+
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+header h1 {
+  color: var(--rojo);
+  font-size: 2.5rem;
+}
+
+/* MENÚ DE NAVEGACIÓN */
+
+nav {
+  flex-grow: 1;
+}
+
+menu.nav a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  height: 100%;
+  padding: 0.5rem;
+}
+
+menu.nav a.activo {
+  font-weight: bolder;
+}
+
+/* MENÚ DE BOTONES */
+menu.botones {
+  gap: 1.5rem;
+}
+
+menu.botones button {
+  height: 2rem;
+}
+
+menu.botones svg {
+  fill: white;
+  height: 65%;
+}
+
+/* MAIN  */
+
+main {
+  padding: 0 3rem;
+}
+
+main menu {
+  overflow: auto;
+  gap: 0.3rem;
+}
+
+main menu img {
+  height: 10rem;
+  width: 15rem;
+  object-fit: cover;
+  margin: 1rem 0;
+}
+
+section {
+  margin-bottom: 3rem;
+  overflow: hidden;
+}
+
+/* BARRA DE SCROLL */
+/* width */
+::-webkit-scrollbar {
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--rojo);
+  border-radius: 10px;
+}
+
+/* Ocultar barra scroll */
+/* ::-webkit-scrollbar {
+  display: none;
+}
+ */
